Use fresh screenshot OCR in NOVA screen observation